--- a/24.05 凉风同学的投资分享 1.0.md
+++ b/24.05 凉风同学的投资分享 1.0.md
@@ -1,5 +1,5 @@
 凉风同学  24.05
-<img src="https://raw.githubusercontent.com/frontsmith/FNotePic/master/data/202404291510570.png" alt="lauramarkcb_simple_avatar_pixar_3d_rendering_83e59e8e-1c0f-43cf-8320-60efde039381.png" style="zoom:10%;" />
+<img src="https://raw.githubusercontent.com/frontsmith/FNotePic/master/data/202404291510570.png" width="200" />
 
 
 - 分享1.0版仅做基础篇内容，仅涉及一些方向、逻辑；
