--- a/24.05 凉风同学的投资分享 1.0.md
+++ b/24.05 凉风同学的投资分享 1.0.md
@@ -1,8 +1,8 @@
 # 💰︎凉风同学的投资分享 1.0
 
-凉风同学  24.05
+<img src="https://raw.githubusercontent.com/frontsmith/FNotePic/master/data/202404291510570.png" width="50" /> 凉风同学  24.05
 
-<img src="https://raw.githubusercontent.com/frontsmith/FNotePic/master/data/202404291510570.png" width="50" />
+
 
 
 - 分享1.0版仅做基础篇内容，仅涉及一些方向、逻辑；
