--- a/24.05 凉风同学的投资分享 1.0.md
+++ b/24.05 凉风同学的投资分享 1.0.md
@@ -1,6 +1,7 @@
 # 💰︎凉风同学的投资分享 1.0
 
-<img src="https://raw.githubusercontent.com/frontsmith/FNotePic/master/data/202404291510570.png" width="50" /> 凉风同学  24.05
+<img src="https://raw.githubusercontent.com/frontsmith/FNotePic/master/data/202404291510570.png" width="50" /> 
+凉风同学  24.05
 
 
 
