Update 24.05 凉风同学的投资分享 1.0.md

--- a/24.05 凉风同学的投资分享 1.0.md
+++ b/24.05 凉风同学的投资分享 1.0.md
@@ -1,12 +1,14 @@
 # 💰︎凉风同学的投资分享 1.0
 
-<img src="https://raw.githubusercontent.com/frontsmith/FNotePic/master/data/202404291510570.png" width="50" /> 
+<img src="https://raw.githubusercontent.com/frontsmith/FNotePic/master/data/202404291510570.png" width="100" /> 
+
 凉风同学  24.05
 
 
 
 
 - 分享1.0版仅做基础篇内容，仅涉及一些方向、逻辑；
+- 播客闲聊式分享，**湿货**多。
 
 <div STYLE="page-break-after: always;"></div>
 
