Update and rename 茁澍的疫苗接种计划.md to 儿童疫苗接种计划.md

--- a/儿童疫苗接种计划.md
+++ b/儿童疫苗接种计划.md
@@ -1,37 +1,5 @@
 
-## 一、茁澍的疫苗接种安排
-
-| 状态  | 时间计划     | 节点计划   | 疫苗名称                        | 备注                 |
-| --- | -------- | ------ | --------------------------- | ------------------ |
-| ☑   | 24.03.30 | 出生24小时 | 🔷乙肝疫苗(1/3)、🔺卡介苗、💠乙肝免疫球蛋白 |                    |
-| ☑   | 24.04.30 | 1月龄    | 🔷乙肝疫苗(2/3)                 |                    |
-| 🔳  | 24.04.15 | 42天    | 🟡五价轮状(1/3)                 |                    |
-| 🔳  | 24.04.23 | 间隔7天   | 🟢13价肺炎(1/4)                |                    |
-| 🔳  | 24.05.30 | 2月龄    | 🔵五联(1/4)                   |                    |
-| 🔳  | 24.06.15 | 2.5月龄  | 🟡五价轮状(2/3)                 |                    |
-| 🔳  | 24.06.22 | 间隔7天   | 🟢13价肺炎(2/4)                | 13价肺炎的每两剂间隔至少 1 个月 |
-| 🔳  | 24.06.30 | 3月龄    | 🔵五联(2/4)                   |                    |
-| 🔳  | 24.07.07 | 间隔7天   | 🟣流脑AC结合(1/3)               |                    |
-| 🔳  | 24.07.15 | 3.5月龄  | 🟡五价轮状(3/3)                 |                    |
-|     |          | 间隔7天   | 🟢13价肺炎(3/4)                |                    |
-| 🔳  |          | 4月龄    | 🔵五联(3/4)                   |                    |
-| 🔳  |          | 间隔7天   | 🟣流脑AC结合(2/3)               |                    |
-|     |          | 5月龄    | 🟣流脑AC结合(3/3)               |                    |
-|     |          |        |                             |                    |
-|     |          | 6月龄    | 🔷乙肝疫苗(3/3)、🟤手足口疫苗(1/2)    |                    |
-|     |          | 7月龄    | 🟤手足口疫苗(2/2)                |                    |
-|     |          | 8月龄    | 🔶乙脑减毒疫苗                    |                    |
-|     |          | 间隔7天   | 🟩麻腮风疫苗                     |                    |
-|     |          | 12月龄   | 🟢13价肺炎(4/4)                |                    |
-|     |          | 12月龄+  | 🔘水痘疫苗                      |                    |
-|     |          | 18月龄   | 🟪甲肝灭火疫苗(1/2)               |                    |
-|     |          | 18月龄   | 🔵五联(3/4)                   |                    |
-|     |          | 间隔7天   | 🟩麻腮风疫苗                     |                    |
-|     |          | 24月龄   | 🟪甲肝灭火疫苗(2/2)               |                    |
-
-
-
-## 二、儿童疫苗说明表
+## 一、儿童疫苗说明表
 （不考虑费用情况，个人总结的国内疫苗最优解版）
 
 | 疫苗名称                 | 介绍说明                                                            | 接种时间                                                                  | 备注                                                                                                                          |
@@ -77,7 +45,7 @@
 - 深圳社康-疫苗预约一览表 （2024版）
 ![image.png](https://raw.githubusercontent.com/frontsmith/FNotePic/master/data/202405081636261.png)
 
-## 三、接种注意事项
+## 二、接种注意事项
 
 1-接种前阅读《接种知情同意书》了解疫苗禁忌，不良反应
 2-如宝宝近期有服药，告知医生。
@@ -92,12 +60,12 @@
 灭活：就是抓住坏人杀死干掉
 减毒：抓住坏人，废除武功
 
-## 四、深圳社康疫苗接种注意事项
+## 三、深圳社康疫苗接种注意事项
 
 - 【深圳疾控】公众号预约疫苗，宝宝建档后系统会自动给出疫苗接种的时间计划。（据了解，系统时间计划可能有误，建议监护人核对接种计划）
 - 自费的疫苗(比如五价轮状、五联)，只有在社康帮忙在系统提前勾选或第一针接种后，系统方可显示相应疫苗。
 
-## 五、其他
+## 四、其他
 ### 国产vs进口 
 [疫苗：进口与国产，哪个好](https://www.guokr.com/article/411048/)
 
