--- a/儿童疫苗接种计划.md
+++ b/儿童疫苗接种计划.md
@@ -1,6 +1,7 @@
 
 ## 一、儿童疫苗说明表
-（不考虑费用情况，个人总结的国内疫苗最优解版）
+2023年版
+（不考虑费用，个人总结的国内疫苗最优解版）
 
 | 疫苗名称                 | 介绍说明                                                            | 接种时间                                                                  | 备注                                                                                                                          |
 | -------------------- | --------------------------------------------------------------- | --------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------- |
