--- a/儿童疫苗接种计划.md
+++ b/儿童疫苗接种计划.md
@@ -79,4 +79,4 @@
 而进口13价肺炎结合疫苗的优势在于全球首个13价肺炎结合疫苗产品，且面向全球很多国家上市接种
 ```
 
-[流脑疫苗作用\_效果\_说明书|丁香医生](https://dxy.com/drug/11000/detail)
+[流脑疫苗说明书|丁香医生](https://dxy.com/drug/11000/detail)
